--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,25 @@
+
+
+.input-container {
+  display: flex; /* Используем flexbox для выравнивания */
+  align-items: center; /* Выравнивание по вертикали по центру */
+  gap: 8px; /* Расстояние между полем и кнопкой */
+}
+
+#search-box {
+  width: 100%; /* Устанавливаем ширину 100% */
+  max-width: 272px; /* Максимальная ширина */
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding-left: 16px;
+}
+
+
+
+
+
+
 :root {
   --items-per-row: 3;
   --vertical-gap: 24px;
@@ -12,13 +34,7 @@ body {
   margin: 0px auto 32px auto;
 
 }
-#search-box {
-  width: 272px;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  padding-left: 16px;
-}
+
 #search-box:focus {
   border: 2px solid #4e75ff; /* Синяя рамка при фокусе */
   outline: none; /* Убираем стандартный контур */
@@ -99,7 +115,7 @@ body {
   cursor: pointer;
   border-radius: 8px;
   border: none;
-    width: 91px;
+  width: 91px;
   height: 40px;
   margin-left: 8px;
 }
